# ckb-js-vm

./: .gitignore  .gitmodules  Makefile  README.md  checksums-nix.txt  checksums.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  qjsc.mak  reproducible_build.sh  reproducible_build_nix.sh  shell.nix  tsconfig.base.json  tsconfig.json  typedoc.base.json  typedoc.json  update-gnu-notes.sh
docs/: fs.md  intro.md  security.md  syscalls.md
include/: Makefile  ckb_cell_fs.c  ckb_cell_fs.h
libc/: assert.h  ckb_cell_fs.h  ctype.h  entry.h  errno.h  features.h  fenv.h  float.h  inttypes.h  limits.h  locale.h  malloc.h  math.h  setjmp.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h
quickjs/: ckb_module.c  ckb_module.h  cmdopt.c  cmdopt.h  cutils.c  cutils.h  libbf.c  libregexp.c  libunicode.c  libunicode.h  mocked.c  mocked.h  qjs.c  quickjs-libc.c.removed  quickjs.c  quickjs.h  std_module.c
src/: base64.c  base64.h  ckb_module.c  ckb_module.h  ckb_smt.h  conversion.h  dump_secp256k1_data.c  hash_module.c  hash_module.h  misc_module.c  qjs.c  (+10 more)
tests/ckb_js_tests/: Cargo.toml  Makefile
tests/ckb_js_tests/src/: lib.rs
tests/ckb_js_tests/templates/: default_by_cell.json  fs_module_mount.json  load_script.json  module.json  secp256k1_blake160_lock.json  simple_udt.json  syscall.json
tests/ckb_js_tests/test_data/: simple_udt.js  spawn_caller.c  syscall.js
tests/ckb_js_tests/test_data/fs_module/: index.js
tests/ckb_js_tests/test_data/fs_module_mount/: index.js  init.js  main.js
tests/ckb_js_tests/test_data/load_script/: fib.js  fib_module.js  index.js
(+124 files in other folders)
